fix: horizontal scroll with 100vw

--- a/assets/styles/global.scss
+++ b/assets/styles/global.scss
@@ -15,6 +15,7 @@ html {
 
 html, body {
   background-color: #f4f4f4;
+  overflow-x: hidden;
 }
 
 .umz-font-bold {
